[package]
authors = ["Anthony Romano <romanoanthony061@gmail.com>", "Joe Neeman <joeneeman@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface with the AHT10 temperature/humidity sensor"
keywords = ["embedded-hal-driver", "temperature", "humidity", "aht10"]
license = "AGPL-3.0-or-later"
name = "aht10-async"
repository = "https://github.com/jneem/aht10"
version = "0.0.1"
edition = "2021"

[dependencies]
embedded-hal-async = "=1.0.0-rc.1"
bitflags = "^1.1.0"
